package com.alphaharvester.domain.model;

public enum CandidateAssetClass {
    CORE,
    SATELLITE,
    DEFENSIVE
}

