package com.alphaharvester.domain.model;

public enum DistributionFrequency {
    MONTHLY,
    QUARTERLY,
    SEMI_ANNUAL,
    ANNUAL,
    NONE
}

