package com.alphaharvester.domain.model;

public enum TaxTag {
    OVERSEAS_76W,
    DOMESTIC_54C
}

