@startuml GlobalServicesDomainModel
skinparam style strictuml
title Domain Model - Global Services Module (Clean Code Edition)

package "Global Domain Entities (Persisted Data)" {
    class GlobalAssetMetadata <<Entity>> {
        +String id
        +String ticker
        +String name
        +DateTime listing_date
        +String underlying_index
        +Decimal fund_size_twd
        +CandidateAssetClass asset_class
        +DistributionFrequency distribution_frequency
        +syncGlobalAssets(): OperationStatus
    }

    class BenchmarkIndex <<Entity>> {
        +String id
        +String ticker
        +String name
        +String region
        +String description
    }

    class MarketDailyQuote <<Entity>> {
        +String id
        +UUID asset_id
        +UUID benchmark_id
        +String ticker
        +DateTime trade_date
        +Decimal open_price
        +Decimal high_price
        +Decimal low_price
        +Decimal close_price
        +Integer volume_shares
        +Decimal trade_value_twd
        +Decimal net_asset_value
        +Decimal discount_premium_percentage
    }

    class MacroYieldSnapshot <<Entity>> {
        +String id
        +DateTime record_date
        +Decimal us_corporate_bond_effective_yield
        +Decimal us_10_year_treasury_yield
        +Decimal us_20_year_treasury_yield
        +Decimal yield_spread_10y_minus_2y
    }

    class GlobalAssetScore <<Entity>> {
        +String id
        +String ticker
        +DateTime evaluation_date
        +CandidateAssetClass asset_class
        +Integer class_rank
        +Decimal composite_score
        +Decimal fund_size_twd
    }

    class DcaPopularityRank <<Entity>> {
        +String id
        +String ticker
        +Integer ranking_year
        +Integer ranking_month
        +Integer rank_position
        +Integer regular_investor_count
    }

    class DividendAnnouncement <<Entity>> {
        +String id
        +String ticker
        +DateTime ex_date
        +DateTime payment_date
        +Decimal dividend_per_share
        +TaxTag tax_tag
    }

    class CorporateAction <<Entity>> {
        +String id
        +String ticker
        +CorporateActionType action_type
        +DateTime effective_date
        +Integer split_to_shares
        +Integer split_from_shares
    }
}

package "Persistence Contracts" {
    interface GlobalAssetMetadataRepository <<Interface>> {
        +Create(GlobalAssetMetadata data): GlobalAssetMetadata
        +GetById(String id): GlobalAssetMetadata
        +Update(String id, GlobalAssetMetadata delta): GlobalAssetMetadata
        +Delete(String id): Boolean
    }

    interface BenchmarkIndexRepository <<Interface>> {
        +Create(BenchmarkIndex data): BenchmarkIndex
        +GetById(String id): BenchmarkIndex
        +Update(String id, BenchmarkIndex delta): BenchmarkIndex
        +Delete(String id): Boolean
    }

    interface MarketDailyQuoteRepository <<Interface>> {
        +Create(MarketDailyQuote data): MarketDailyQuote
        +GetById(String id): MarketDailyQuote
    }

    interface MacroYieldSnapshotRepository <<Interface>> {
        +Create(MacroYieldSnapshot data): MacroYieldSnapshot
        +GetById(String id): MacroYieldSnapshot
    }

    interface GlobalAssetScoreRepository <<Interface>> {
        +Create(GlobalAssetScore data): GlobalAssetScore
        +GetById(String id): GlobalAssetScore
    }

    interface DcaPopularityRankRepository <<Interface>> {
        +Create(DcaPopularityRank data): DcaPopularityRank
        +GetById(String id): DcaPopularityRank
    }

    interface DividendAnnouncementRepository <<Interface>> {
        +Create(DividendAnnouncement data): DividendAnnouncement
        +GetById(String id): DividendAnnouncement
    }

    interface CorporateActionRepository <<Interface>> {
        +Create(CorporateAction data): CorporateAction
        +GetById(String id): CorporateAction
    }
package "Ingress & Orchestration Services (Cloud Scheduler / Jobs)" {
    class MarketDataSyncService <<Service>> {
        +syncMarketData(scope: String): MarketDataSyncResponse
        -syncGlobalAssets(): Integer
        -syncMarketDailyQuotes(): Integer
        -syncMacroYields(): Integer
        -syncDcaPopularityRanks(): Integer
        -syncCorporateActionsAndDividends(): Integer
    }

    class GlobalAssetScoreEvaluationService <<Service>> {
        +evaluateGlobalAssetScores(): GlobalAssetScoreEvaluationResponse
    }
}

package "Query Ingress (UI Read Gateway)" {
    interface GlobalServicesGraphQLResolver <<GraphQLResolver>> {
        +listGlobalAssets(filter: GlobalAssetFilterInput): List<GlobalAssetMetadata>
        +getGlobalAssetByTicker(ticker: String): GlobalAssetMetadata
        +listBenchmarkIndices(): List<BenchmarkIndex>
        +getMarketQuoteTimeSeries(ticker: String, startDate: LocalDate, endDate: LocalDate): List<MarketDailyQuote>
        +getLatestMacroYieldSnapshot(): MacroYieldSnapshot
        +listCandidateScores(assetClass: CandidateAssetClass): List<GlobalAssetScore>
        +listTop20DcaRanks(year: Integer, month: Integer): List<DcaPopularityRank>
        +listDividendAnnouncements(ticker: String): List<DividendAnnouncement>
        +listCorporateActions(ticker: String): List<CorporateAction>
        +getDipBuyOpportunity(ticker: String): DipBuyOpportunityScore
    }
}

' Relationships & Ownership
GlobalAssetMetadata "1" o-- "*" MarketDailyQuote : "tracks historical quotes"
GlobalAssetMetadata "1" o-- "*" GlobalAssetScore : "evaluated into"
GlobalAssetMetadata "1" o-- "*" DcaPopularityRank : "ranked by"
GlobalAssetMetadata "1" o-- "*" DividendAnnouncement : "declares"
GlobalAssetMetadata "1" o-- "*" CorporateAction : "undergoes"
BenchmarkIndex "1" o-- "*" MarketDailyQuote : "supplies benchmark quotes"

' Domain Enumerations
enum CandidateAssetClass {
    CORE
    SATELLITE
    DEFENSIVE
}

enum DistributionFrequency {
    MONTHLY
    QUARTERLY
    SEMI_ANNUAL
    ANNUAL
    NONE
}

enum CorporateActionType {
    SPLIT
    REVERSE_SPLIT
}

enum TaxTag {
    OVERSEAS_76W
    DOMESTIC_54C
}

note right of GlobalAssetMetadata : ID MUST be a UUID v4\nListing days computed dynamically from listing_date
note right of BenchmarkIndex : Tracks 9 global benchmarks & sentiment gauges:\n1. Broad & Tech: ^TWII (TAIEX), ^GSPC (S&P 500), ^NDX (Nasdaq 100), ^SOX (PHLX Semi), ^N225 (Nikkei)\n2. Volatility: ^VIX (S&P 500 Volatility), ^VXN (Nasdaq 100 Volatility), ^MOVE (US Treasury Volatility)\n3. Sentiment: FEAR_GREED (CNN Fear & Greed Index, 0-100)
note right of GlobalAssetScore : Segmented Ranking within CandidateAssetClass\nCore, Satellite, and Defensive rank independently\nORPHAN is strictly a Personal Position state
note right of DcaPopularityRank : Year and month explicitly separated (e.g. 2026, 8)
note right of MacroYieldSnapshot : Pure market interest rate facts from FRED\nState logic (Accumulate/Neutral/Harvest) computed in memory
note right of CorporateAction : 1 split into 4 is split_from_shares=1, split_to_shares=4\nGuarantees exact integer division without floating-point errors
note right of MarketDailyQuote : Parent links: asset_id for ETFs, benchmark_id for Benchmarks\nRaw unadjusted close_price. Splits factored via CorporateAction, dividends via DividendAnnouncement\nnet_asset_value and discount_premium_percentage are NULL for BenchmarkIndex
note as ImmutableFactNote
  **Architecture Rule: Master Data vs Immutable Ledgers**
  - Master Data (GlobalAssetMetadata, BenchmarkIndex): Mutable, requires version, created_at, updated_at, deleted_at.
  - Immutable Ledgers / Facts (MarketDailyQuote, MacroYieldSnapshot, GlobalAssetScore,
    DcaPopularityRank, DividendAnnouncement, CorporateAction):
    Read-only / append-only facts. Do NOT have version, created_at, updated_at, or deleted_at.
end note
@enduml
